# WordWizard

./: LICENSE  README.md  package-lock.json  package.json
.github/workflows/: main.yml
src/: App.tsx  bindings.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_commands.rs  main.rs
src-tauri/src/core/: mod.rs  store.rs
src-tauri/src/core/assessment/: mod.rs
src-tauri/src/core/deck/: mod.rs
src-tauri/src/core/student/: mod.rs
src/components/assessment/: AssessmentList.tsx  AssessmentListItem.tsx  NewAssessment.tsx  StudentAssessment.tsx
src/components/common/: AddButton.tsx  NoContentMessage.tsx  QuickMenu.tsx  SideDrawer.tsx  Timer.tsx  ViewPage.tsx
src/components/common/navbar/: Navbar.module.css  Navbar.tsx
src/components/common/viewnavbar/: ViewNabar.tsx  ViewNavbar.module.css
src/components/deck/: DeckCard.tsx  DeckCardGrid.tsx  DeckList.tsx  DeckListItem.tsx  EditDeck.tsx  NewCard.tsx
src/components/student/: StudentDetails.tsx  StudentList.tsx  StudentListItem.tsx
src/views/: AssessmentsView.tsx  DecksView.tsx  ReadEvaluationView.css  ReadEvaluationView.tsx  StudentsView.tsx
